--- a/react/package.json
+++ b/react/package.json
@@ -17,5 +17,6 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "gitHead": "7efaae827fe61ba1088ce383c0a9e2572ea9c098"
 }
