--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.settings.json",
   "files": [],
-  "references": [{ "path": "preset" }, { "path": "react" }]
+  "references": [{ "path": "tailwind-preset" }, { "path": "react" }]
 }
