--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,10 @@
 {
-  "packages": ["tailwind-preset", "react", "storybook"],
-  "version": "0.0.2",
+  "packages": [
+    "tailwind-preset",
+    "react",
+    "storybook"
+  ],
+  "version": "0.0.3",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
