--- a/tailwind-preset/package.json
+++ b/tailwind-preset/package.json
@@ -15,5 +15,8 @@
     "@babel/preset-typescript": "^7.14.5",
     "typescript": "^4.3.4"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "7efaae827fe61ba1088ce383c0a9e2572ea9c098"
 }
