--- a/react/package.json
+++ b/react/package.json
@@ -23,5 +23,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "gitHead": "96ca720a42a1bf7c8d752cba57544c53477aea4b"
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "cf5844e90b738996b47e6ff0480a1363979a4c8e"
 }
