--- a/storybook/package.json
+++ b/storybook/package.json
@@ -10,6 +10,9 @@
     "babel-loader": "^8.2.2",
     "typescript": "^4.3.4"
   },
+  "publishConfig": {
+    "access": "restricted"
+  },
   "license": "MIT",
   "private": true
 }
