--- a/tailwind-preset/package.json
+++ b/tailwind-preset/package.json
@@ -18,5 +18,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "workspaces": [
+    "react",
+    "tailwind-preset"
+  ],
   "gitHead": "7efaae827fe61ba1088ce383c0a9e2572ea9c098"
 }
