--- a/storybook/package.json
+++ b/storybook/package.json
@@ -2,12 +2,15 @@
   "name": "@sdlk/storybook",
   "version": "0.0.2",
   "main": "index.js",
-  "scripts": {
-    "dev": "start-storybook"
-  },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.3.0",
+    "@storybook/addon-essentials": "^6.3.0",
+    "@storybook/addon-links": "^6.3.0",
     "@storybook/react": "^6.3.0",
     "babel-loader": "^8.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.3.4"
   },
   "publishConfig": {
@@ -18,5 +21,10 @@
     "tailwind-preset"
   ],
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {},
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  }
 }
