--- a/tailwind-preset/tsconfig.json
+++ b/tailwind-preset/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
     "composite": true,
+    "module": "commonjs",
     "outDir": "lib",
     "rootDir": "src"
   },
