--- a/react/package.json
+++ b/react/package.json
@@ -1,17 +1,16 @@
 {
   "name": "@sdlk/react",
   "version": "0.0.8",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "build": "tsc -b .",
+    "dev": "tsc -m esnext --watch",
+    "build": "tsc -m esnext",
     "lint": "eslint src --ext js,ts,tsx",
     "test": "jest",
     "typecheck": "tsc --emitDeclarationOnly"
   },
   "license": "MIT",
-  "dependencies": {
-    "@sdlk/tailwind-preset": "0.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
@@ -20,6 +19,7 @@
     "typescript": "^4.3.4"
   },
   "peerDependencies": {
+    "@sdlk/tailwind-preset": "0.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
