--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "outDir": "lib",
+    "rootDir": "src",
     "allowJs": false,
     "jsx": "preserve"
   },
