--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "./tsconfig.settings.json",
   "files": [],
-  "references": [{ "path": "tailwind-preset" }, { "path": "react" }]
+  "references": [
+    { "path": "tailwind-preset" },
+    { "path": "react" },
+    { "path": "react-storybook" }
+  ]
 }
