--- a/tailwind-preset/package.json
+++ b/tailwind-preset/package.json
@@ -14,14 +14,14 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4"
   },
   "publishConfig": {
     "access": "public"
   },
-  "workspaces": [
-    "react",
-    "tailwind-preset"
-  ],
-  "gitHead": "7efaae827fe61ba1088ce383c0a9e2572ea9c098"
+  "gitHead": "7efaae827fe61ba1088ce383c0a9e2572ea9c098",
+  "peerDependencies": {
+    "tailwindcss": "^2.2.4"
+  }
 }
