--- a/react-storybook/package.json
+++ b/react-storybook/package.json
@@ -67,6 +67,7 @@
     "@storybook/node-logger": "^6.3.0",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.3.0",
+    "clsx": "^1.1.1",
     "craco": "^0.0.3",
     "eslint-loader": "^4.0.2",
     "storybook-dark-mode": "^1.0.8"
