--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,11 @@
 {
-  "packages": ["tailwind-preset", "react", "react-entypo", "react-storybook"],
-  "version": "0.0.15",
+  "packages": [
+    "tailwind-preset",
+    "react",
+    "react-entypo",
+    "react-storybook"
+  ],
+  "version": "0.0.16",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
