--- a/react/package.json
+++ b/react/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.3.4"
   },
   "peerDependencies": {
+    "clsx": "1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
